<resources>
    <string name="app_name">storyApp</string>
    <string name="welcome">Selamat Datang</string>
    <string name="pleaseLogin">Silahkan Login</string>
    <string name="register">Buat akun baru</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="Cpass">Konfirmasi Password</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>

    <string name="invalid_email">Email invalid</string>
    <string name="input_email">Masukkan Email</string>
    <string name="input_nama">Masukkan Nama</string>
    <string name="Login">Sudah punya akun</string>

    <string name="input_pass">Password harus di isi</string>
    <string name="pass_length">Minimal 8 karakter</string>

    <string name="acc_created">Akun berhasil dibuat</string>
    <string name="email_exist">Email telah dipakai</string>
    <string name="timeout">Timeout!</string>
    <string name="error_message">Error :</string>
    <string name="error_desc">Masukkan semua data</string>
    <string name="pass_salah">Password harus sama</string>
    <string name="success_login">Berhasil Login</string>
    <string name="unauthorized">Email atau password mungkin salah</string>
    <string name="see_password">Tampilkan password</string>
    <string name="input_benar">Masukkan data dengan benar</string>
    <string name="OK">OK</string>
    <string name="Email_invalid">Email sudah digunakan</string>
    <string name="logout">Logout</string>
    <string name="responEror">Gagal Memuat</string>
    <string name="Camera">Kamera</string>
    <string name="Import">Galeri</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="upload">Unggah</string>
    <string name="uploadscs">Berhasil Mengunggah</string>
    <string name="title_activity_maps">Maps</string>
    <string name="deny">Tidak mendapatkan izin</string>


    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>

    <string name="retry">Coba lagi</string>

</resources>