<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bglogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_marginTop="100dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/user"
        android:alpha="0"
        />
    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        android:alpha="0"/>

    <TextView
        android:id="@+id/pleaselogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/pleaseLogin"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:textStyle="bold"
        android:alpha="0"/>

    <com.example.mystoryapp.CustomView.CustomEmail
        android:id="@+id/inputEmail"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textSize="13dp"
        android:drawablePadding="5dp"
        android:alpha="0"/>

    <com.example.mystoryapp.CustomView.CustomPassword
        android:id="@+id/inputPassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/pass"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textSize="13dp"
        android:drawablePadding="5dp"
        android:alpha="0"
        />

        <CheckBox
            android:id="@+id/seePassword"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/see_password"
            android:layout_gravity="left"
            android:layout_marginLeft="79dp"
            android:textSize="12dp"
            android:layout_marginTop="5dp"
            android:alpha="0"/>

    <com.example.mystoryapp.CustomView.CustomButton
        android:id="@+id/loginButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/masuk"
        android:textColor="@color/white"
        android:textSize="13dp"
        android:textStyle="bold"
        android:alpha="0"
        android:enabled="false"
        android:background="@drawable/button_corner_radius"
        />

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:clickable="true"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="13dp"
        android:textStyle="bold"
        android:alpha="0"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />



</FrameLayout>